--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,10 @@
+meego-wordle (1.1.5) unstable; urgency=low
+
+  * Updated Russian dictionary
+  * Minor UI tweaks
+
+ -- Slava Monich <slava@monich.com>  Sun, 27 Oct 2024 06:33:55 +0200
+
 meego-wordle (1.1.4) unstable; urgency=low
 
   * Initial release for MeeGo
