--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,10 @@
+meego-wordle (1.1.7) unstable; urgency=low
+
+  * Updated Russian dictionary
+  * Updated Finnish translation
+
+ -- Slava Monich <slava@monich.com>  Sun, 02 Mar 2025 15:22:09 +0200
+
 meego-wordle (1.1.6) unstable; urgency=low
 
   * Updated Ukrainian dictionary
